After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 103571 - Difference of two time values one day too small
Difference of two time values one day too small
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Analytics
1.0.x
Other other
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-01-15 13:09 UTC by Bart Post
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bart Post 2003-01-15 13:29:55 UTC
Package: Gnumeric
Severity: normal
Version: 1.0.12
Synopsis: Difference of two time values one day too small
Bugzilla-Product: Gnumeric
Bugzilla-Component: Analytics

Description:
Description of Problem:
When calculating the difference between the two time values 27:30 and
3:30, the result is calculated correctly (1 or -1), but displayed as
0:00.

Steps to reproduce the problem:
1. Enter the formula ="27:30"-"3:30" in a cell.
2. See the result, being 1.
3. Change the cell format to "[h]:mm"

Actual Results:
The cell now shows 0:00, but the value is still 1.

Expected Results:
The cell should show 24:00.

How often does this happen?
Always.

Additional Information:




------- Bug moved to this database by unknown@bugzilla.gnome.org 2003-01-15 08:29 -------

Reassigning to the default owner of the component, jody@gnome.org.

Comment 1 Morten Welinder 2003-01-15 14:15:11 UTC
Works for me in 1.1 series.
Comment 2 Jody Goldberg 2003-03-19 04:27:05 UTC
The fix went into the 1.1.x series a while ago, and I just back ported
it to 1.0.x.  It will be in 1.0.13